--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -15,7 +15,7 @@ header {
 /*------- header -------- */
 
 /*------- main -------- */
-/*-- section --*/
+/*-- section 1 --*/
 section {
     display: flex;
     justify-content: center;
@@ -43,7 +43,7 @@ section {
     width: 500px;
     height: 400px;
 }
-/*-- section --*/
+/*-- section 1 --*/
 /*-- nav --*/
 nav {
     height: 60px;
@@ -69,6 +69,110 @@ nav li {
 nav li a {
     color: black;
 }
-
-
 /*-- nav --*/
+/*-- section 2 --*/
+.section_2 {
+    height: 300px;
+}
+
+.section_2 h2 {
+    font-size: 30px;
+}
+
+.section_2 p {
+    margin-top: 40px;
+}
+/*-- section 2 --*/
+/*-- slider --*/
+.slider {
+
+}
+
+.slider img {
+    width: 1200px;
+    height: 650px;
+}
+
+
+
+
+
+/*-- slider --*/
+/*-- section_3 --*/
+.clearfix::after {
+    content: "";
+    display: block;
+    clear: both;
+}
+
+.tab-nav li{
+    float:left;
+    width: 300px;
+    height: 60px;
+    border-right:1px solid #ddd;
+    border-top:1px solid #ddd;
+    background-color:#eee;
+}
+
+.tab-nav li:first-child {
+    border-left:1px solid #ddd;
+}
+
+.tab-nav li a{
+    display:block;
+    padding:5px 10px;
+    color:#777;
+    text-decoration:none;
+    padding-top: 25px;
+}
+
+.tab-nav li a.active{
+    width: 300px;
+    height: 60px;
+    border-bottom:1px solid #fff;
+    background-color:#fff;
+    margin-bottom:-1px;
+}
+
+.tab-content{
+    width: 1100px;
+    height: 400px;
+    border:1px solid #ddd;
+}
+
+.tab-content > .active {
+    display: block;
+}
+
+.tab-content > div {
+    display: none;
+    padding:15px;
+    height: 100px;
+    line-height: 24px;
+}
+/*-- section_3 --*/
+
+
+
+
+
+
+
+
+
+/*-- footer --*/
+footer {
+    height: 50px;
+    border-top: 1px solid #c0c0c0;
+    text-align: center;
+    margin-top: 70px;
+    text-align: right;
+    font-family: Hiragino Mincho ProN;
+}
+
+footer p {
+    color: #504946;
+    margin-right: 20px;
+    margin-top: 10px;
+}
+/*-- footer --*/
