--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -53,6 +53,7 @@ section {
 .section_left {
     padding: 30px;
     padding-left: 0;
+    padding-top: 40px;
 }
 
 .section_left h2 {
@@ -111,6 +112,7 @@ nav li a {
 /*-- section 2 --*/
 .section_2 {
     height: 500px;
+    text-align: center;
 }
 
 .section_2 h2 {
@@ -120,25 +122,25 @@ nav li a {
 }
 
 .summary_text {
-    margin-top: 40px;
+    margin-top: 55px;
     font-size: 20px;
     letter-spacing: 3px;
     font-weight: lighter;
 }
 
 .summary_love {
-    font-size: 70px;
-    letter-spacing: 40px;
+    font-size: 60px;
+    letter-spacing: 20px;
 }
 
-.summary_love {
+/* .summary_love {
     transition: all 100s ease;
 }
   
 .summary_love.hide {
     /* opacity: 0; */
-    display: none;
-}
+    /* display: none;
+} */
 /*-- section 2 --*/
 
 /*-- slider --*/
@@ -149,6 +151,14 @@ nav li a {
 /*-- slider --*/
 
 /*-- section_3 --*/
+.tab-content{
+    width: 1100px;
+    height: 400px;
+    border:1px solid #ddd;
+    text-align: left;
+    font-size: 18px;
+}
+
 .clearfix::after {
     content: "";
     display: block;
@@ -187,13 +197,6 @@ nav li a {
 .tab-nav li .active {
     border-right: 1px solid #ddd;
 }
-
-.tab-content{
-    width: 1100px;
-    height: 400px;
-    border:1px solid #ddd;
-}
-
 .tab-content > .active {
     display: block;
 }
@@ -203,6 +206,10 @@ nav li a {
     padding:15px;
     height: 100px;
     line-height: 24px;
+}
+
+.tab-content li {
+    padding-top: 20px;
 }
 /*-- section_3 --*/
 
