--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -38,6 +38,12 @@ header {
 .header_right li i {
     font-size: 30px;
 }
+
+/*-- humburger --*/
+.humburger {
+    display: none;
+}
+
 /*------- header -------- */
 
 /*------- main -------- */
@@ -84,28 +90,28 @@ section {
 /*-- section 1 --*/
 
 /*-- nav --*/
-nav {
+.nav_pc {
     height: 60px;
     background-color: #eebbcb;
     margin-top: 80px;
     font-family: Georgia;
 }
 
-nav ul {
+.nav_pc ul {
     overflow: hidden;
     display:flex;
     justify-content:space-between;
     align-items: center;
 }
 
-nav li {
+.nav_pc li {
     float: left;
     margin: 0 auto;
     margin-top: 20px;
     font-size: 18px;
 }
 
-nav li a {
+.nav_pc li a {
     color: black;
 }
 /*-- nav --*/
@@ -263,13 +269,129 @@ nav li a {
     }
 
     h2 {
-        color: #aaaab0;
+        color: #7d7b83;
     }
 
     .header_right {
         display: none;
     }
-    
+
+    /*-- humburger ------------------------------*/
+    .humburger {
+        display: block;
+        position: fixed;
+        top: 0;
+        left: -300px;
+        bottom: 0;
+        width: 300px;
+        background: #ffffff;
+        overflow-x: hidden;
+        overflow-y: auto;
+        -webkit-overflow-scrolling: touch;
+        transition: all .5s;
+        z-index: 3;
+        opacity: 0;
+      }
+    .open .humburger {
+        left: 0;
+        opacity: 1;
+      }
+    .humburger .inner {
+        padding: 25px;
+      }
+    .humburger .inner ul {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+      }
+    .humburger .inner ul li {
+        position: relative;
+        margin: 0;
+        border-bottom: 1px solid #333;
+      }
+    .humburger .inner ul li a {
+        display: block;
+        color: #333;
+        font-size: 14px;
+        padding: 1em;
+        text-decoration: none;
+        transition-duration: 0.2s;
+      }
+    .humburger .inner ul li a:hover {
+        background: #e4e4e4;
+      }
+      /* @media screen and (max-width: 767px) {
+        nav {
+          left: -220px;
+          width: 220px;
+        }
+      } */
+      /*============
+      .toggle_btn
+      =============*/
+    .toggle_btn {
+        display: block;
+        position: fixed;
+        top: 30px;
+        right: 30px;
+        width: 30px;
+        height: 30px;
+        transition: all .5s;
+        cursor: pointer;
+        z-index: 3;
+        margin-top: -10px;
+      }
+    .toggle_btn span {
+        display: block;
+        position: absolute;
+        left: 0;
+        width: 30px;
+        height: 2px;
+        background-color: #333;
+        border-radius: 4px;
+        transition: all .5s;
+      }
+    .toggle_btn span:nth-child(1) {
+        top: 4px;
+      }
+    .toggle_btn span:nth-child(2) {
+        top: 14px;
+      }
+    .toggle_btn span:nth-child(3) {
+        bottom: 4px;
+      }
+    .open .toggle_btn span {
+        background-color: #fff;
+      }
+    .open .toggle_btn span:nth-child(1) {
+        -webkit-transform: translateY(10px) rotate(-315deg);
+        transform: translateY(10px) rotate(-315deg);
+      }
+    .open .toggle_btn span:nth-child(2) {
+        opacity: 0;
+      }
+    .open .toggle_btn span:nth-child(3) {
+        -webkit-transform: translateY(-10px) rotate(315deg);
+        transform: translateY(-10px) rotate(315deg);
+      }
+
+    #mask {
+        display: none;
+        transition: all .5s;
+      }
+    .open #mask {
+        display: block;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: #000;
+        opacity: .8;
+        z-index: 2;
+        cursor: pointer;
+      }
+    /* ------------------------------------------ */
     .section_1 {
         display: inline;
     }
@@ -283,18 +405,19 @@ nav li a {
         height: 300px;
     }
 
-    nav {
+    .nav_pc {
         display: none;
     }
 
     .section_2 div {
-        height: 350px;
+        height: 500px;
         /* margin-bottom: -100px; */
     }
 
     .summary_text p {
-        font-size: 15px;
+        font-size: 20px;
         letter-spacing: 1px;
+        margin-top: -10px;
     }
 
     .summary_text .summary_love {
@@ -303,12 +426,12 @@ nav li a {
     }
 
     .slider {
-        margin-top: -10px;
+        margin-top: 80px;
     }
 
     .slider img{
         width: 375px;
-        height: 300px;
+        height: 250px;
     }
 
     .tab-content {
